internal/predicate/testdata/reject/nested_call_in_table_arg.lua
has_relation(entity, 'x', {nested=has_role(current_user, 'a')})
